--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@ionic/storage-angular": "^3.0.6",
     "@rxweb/reactive-form-validators": "^2.1.6",
     "cordova-plugin-nativestorage": "^2.3.2",
+    "date-fns": "^2.28.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -64,6 +64,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.3.1",
     "typescript": "~4.4.4"
   },
   "description": "An Ionic project"
