--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@full-fledged/alerts": "^13.0.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
@@ -31,6 +32,7 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "date-fns": "^2.28.0",
     "moment": "^2.29.1",
+    "ngx-alerts": "^10.1.3",
     "rxjs": "~6.6.0",
     "zone.js": "~0.11.4"
   },
