--- a/package.json
+++ b/package.json
@@ -16,20 +16,23 @@
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
-    "@angular/platform-browser": "~13.2.2",
+    "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/core": "^5.41.0",
+    "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@full-fledged/alerts": "^13.0.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
     "@rxweb/reactive-form-validators": "^2.1.6",
-    "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "date-fns": "^2.28.0",
     "moment": "^2.29.1",
     "ngx-alerts": "^10.1.3",
